test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/sizeof_void_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  sizeof
  (
  void
  [
  const int(3)
  ]
  )
  ;
  }
